# libsci-dl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: README.md  architecture.md  cli.md  extending.md  library.md  sources.md  troubleshooting.md
examples/: sample_ids.txt
libsci_dl/: __init__.py  cli.py  core.py  download.py  identify.py  manifest.py  models.py
libsci_dl/resolvers/: __init__.py  arxiv.py  doi_pmc.py  doi_scihub.py  doi_unpaywall.py  isbn_libgen.py  url.py
tests/: test_identify.py  test_manifest.py  test_resolvers.py
